<resources>
    <string name="app_name">AndroidPv211</string>

    <!--  main_tv_title - правила именования - main-text_view-title  -->
    <string name="main_tv_title">Знайомство з Android</string>

    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_anim">Анімації</string>
    <string name="main_btn_chat">Чат</string>

    <string name="anim_tv_title">Анімації</string>
    <string name="anim_tv_alpha">Прозорість</string>
    <string name="anim_tv_rotate">Поворот</string>
    <string name="anim_tv_scale">Масштаб</string>

    <string name="chat_tv_title">Теревенюшкі</string>
    <string name="chat_tv_author">Автор:</string>
    <string name="chat_author_hint">Ваш нік у чаті</string>
    <string name="chat_send_hint">Надіслати повідомлення</string>
    <string name="chat_message_hint">Введіть повідомлення</string>
    <string name="chat_content_hint">Останні повідомлення</string>

    <!-- region Calc-->
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_minus">\u2212</string>
    <string name="calc_btn_plus">\u002B</string>
    <string name="calc_btn_multiplication">\u00D7</string>
    <string name="calc_btn_division">\u00F7</string>
    <string name="calc_btn_equals">\u003D</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inversion">\u00B9\u2215&#x1D465;</string>
    <string name="calc_btn_sqr">&#x1D465;\u00B2</string>
    <string name="calc_btn_sqrt">\u00B2\u221A&#x1D465;\u0305</string>
    <string name="calc_btn_plus_minus">\u00B1</string>
    <string name="calc_btn_comma">.</string>
    <string name="calc_btn_percent">%</string>
    <!-- endregion -->


    <!-- region Rates-->
    <string name="rates_tv_title">Курси валют від НБУ</string>
    <string name="main_btn_rates">Курси валют</string>
    <!-- endregion -->
</resources>